// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextQuestion /> should render 1`] = `
.c2 {
  width: auto;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: left;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c4 {
  color: #4c5467;
  font-weight: 600;
  font-size: 0.875rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

.c3 {
  display: inline-block;
  margin-left: 1.25rem;
}

<div>
  <label
    class="c0"
    for="1"
  >
    lorem ipsum
  </label>
  <div
    class="c1"
  >
    <input
      class="c2"
      id="1"
      name="test"
      type="text"
      value="hello"
    />
    <div
      class="c3"
    >
      <span
        class="c4"
      />
    </div>
  </div>
</div>
`;

exports[`<TextQuestion /> should render error 1`] = `
.c2 {
  width: auto;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: left;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

<div>
  <label
    class="c0"
    for="2"
  >
    lorem ipsum
  </label>
  <div
    class="c1"
  >
    <input
      class="c2"
      id="2"
      name="test"
      type="text"
      value=""
    />
  </div>
</div>
`;
